# dme

./: .gitignore  LICENSE  README.md  SECURITY.md  research.md
app/: index.html  install.sh  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/core/: Cargo.toml  README.md  deny.toml  docs.md
app/core/bench/: Cargo.toml  README.md
app/core/bench/csv/: perfs.csv
app/core/bench/src/: grammars.rs  main.rs  preview.rs  search.rs  util.rs
app/core/benches/: README.md  preview.rs
app/core/src/: lib.rs  preview.rs  search.rs  theming.rs  util.rs
app/core/src/export/: chromium.rs
app/core/src/preview/: comrak.rs  math.rs  preview.rs  proposed_grammars.rs  toc.rs  tree_sitter.rs  tree_sitter_grammars.rs  tree_sitter_highlight.rs
app/core/src/search/: disk.rs  search.rs
app/core/src/theming/: error.rs  helix.rs  renderer.rs  theme.rs
app/core/src/theming/default/: README.md
app/core/src/util/: git.rs  security.rs  setup.rs
app/core/test/depth1/: hello.md  test.md
app/core/tests/: README.md  large_preview.rs  large_search.rs
app/core/tests/common/: mod.rs  regression.rs  setup.rs
app/core/tests/reference/: README.md  large-preview-1-ref.html  large-preview-2-ref.html  large-preview-5-ref.html
app/src/: App.vue  Grammars.vue  Home.vue  Search.vue  dme.css  main.css  main.ts  types.ts
app/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
app/src-tauri/ship/: dme.desktop
app/src-tauri/src/: commands.rs  highlight.rs  lib.rs  main.rs
app/src-tauri/src/commands/: grammars.rs  home.rs  preview.rs  search.rs
app/src-tauri/src/export/: export.rs
app/src-tauri/src/search/: disk.rs
docs/: choice-pres.typ  paradigm-analysis-pres.typ  paradigm-analysis-report.typ  paradigm-implementation-pres.typ  paradigm-implementation-report.typ  todos.md
docs/perf/: report.typ  slides.typ
docs/schemas/: architecture.excalidraw  compiler-steps.excalidraw  concurrency.excalidraw  diskresearcher.excalidraw  memory-mgmt-basics.excalidraw
docs/schemas/memory-places/: main.c
