[package]
name = "dme-core"
version = "0.1.0"
description = "The core library of DME, backing up the CLI and Tauri app."
authors = ["you"]
edition = "2021"

# Recommended configuration
# https://tauri.app/concept/size/#cargo-configuration
[profile.dev]
incremental = true # Compile your binary in smaller steps.
[lib]
name = "dme_core"

[dependencies]
comrak = "0.39.0"
pretty_assertions = "1.4.1"
rand = "0.9.1"
regex = "1.11.1"
walkdir = "2"
num_cpus = "1.16"
thiserror = "2.0.12"
toml = "0.8.23"
tree-sitter-highlight = "0.25.6"
