[package]
name = "dme-core"
version = "0.1.0"
description = "The core library of DME, backing up the CLI and Tauri app."
authors = ["you"]
edition = "2021"

# Recommended configuration
# https://tauri.app/concept/size/#cargo-configuration
[profile.dev]
incremental = true # Compile your binary in smaller steps.
[lib]
name = "dme_core"

[dependencies]
etcetera = "0.10.0"
comrak = "0.39.0"
once_cell = "1.21.3"
pretty_assertions = "1.4.1"
regex = "1.11.1"
tree-sitter = "0.25.6"
tree-sitter-highlight = "0.25.6"
tree-sitter-loader = "0.25.6"
walkdir = "2"
num_cpus = "1.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.23"
nucleo-matcher = "0.3.1"
ammonia = "4.1.0"
maplit = "1.0.2"
urlencoding = "2.1.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.9.1"
