[package]
name = "dme-core"
version = "0.1.0"
description = "The core library of DME, backing up the CLI and Tauri app."
authors = ["you"]
edition = "2021"

# Recommended configuration
# https://tauri.app/concept/size/#cargo-configuration
[profile.dev]
incremental = true # Compile your binary in smaller steps.
[lib]
name = "dme_core"

[dependencies]
etcetera = "0.11.0"
comrak = { version = "0.50.0", default-features = false }
once_cell = "1.21.3"
pretty_assertions = "1.4.1"
regex = "1.11.1"
tree-sitter = "0.26.5"
tree-sitter-highlight = "0.26.5"
tree-sitter-loader = "0.26.5"
walkdir = "2"
num_cpus = "1.16"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.23"
nucleo-matcher = "0.3.1"
ammonia = "4.1.0"
maplit = "1.0.2"
urlencoding = "2.1.3"

# Math rendering with Typst
typst = { version = "0.14", default-features = false }
typst-svg = { version = "0.14", default-features = false }
typst-kit = { version = "0.14.2", default-features = false, features = [
    "embed-fonts",
] }
time = "0.3"
# Typst generated SVG optimisations
oxvg_ast = { version = "0.0.5", default-features = false, features = [
    "parse",
    "roxmltree",
] }
oxvg_optimiser = { version = "0.0.5", default-features = false }
mini-moka = "0.10.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.9.2"
